crates/plotnik-tests/tests/02-parser/recovery_validation/named_def_missing_equals_recovers_to_next_def.txt
Broken ^^^
Valid = (ok)
------------------ DIAGNOSTICS -------------------
error: references must be parenthesized
 --> query.ptk:1:1
  |
1 | Broken ^^^
  | ^^^^^^
  |
help: wrap in parentheses
  |
1 - Broken ^^^
1 + (Broken) ^^^
  |

error: expected a pattern
 --> query.ptk:1:8
  |
1 | Broken ^^^
  |        ^^^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
